TEST_PROGRAMS/typing_benchmarks/invalid/block_scope5.go
package main

func main() {
	for true {
		var x int
	}
	println(x)
}
